# return-architecture

./: .gitignore  CLAUDE.md  LICENSE  README.md  install.sh  pyproject.toml
docs/: agent-layout.md  configuration.md  gui-spec.md  server-setup.md
return_architecture/: artifact_exchange.py  cli.py  config.py  daemon.py  init_agent.py  items.py  logging.py  mcp_client.py  memory.py  paths.py  presence_server.py  question_sessions.py  reflective_review.py  runtime.py  scheduling.py  self_schedules.py  service.py  summaries.py  telegram_worker.py
return_architecture/gui/: __init__.py  app.py  helpers.py
return_architecture/gui/pages/: browse.py  home.py  identity.py  install_settings.py  overview.py  schedules.py  service.py  system_prompt.py  telegram.py  tools.py  wizard.py
return_architecture/mcp_servers/: __init__.py  filesystem.py  gdocs.py  url_fetch.py
return_architecture/presence_static/: app.js  index.html  manifest.json  style.css
return_architecture/providers/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  openai_provider.py
return_architecture/tools/: __init__.py  artifact_tools.py  base.py  generate_image.py  inbox.py  mcp_proxy.py  no_response.py  presence.py  private_writings.py  schedule_self.py  send_telegram.py  set_temperature.py  tag_item.py  write_letter.py
